Support callbacks that accept array arguments

Introduce a caching layer for callback parameters, similar to that
used for functions, and use it to support arrays with explicit
length, as well as ruling out (out) and (inout) arguments, that were
never really supported.

https://bugzilla.gnome.org/show_bug.cgi?id=654406